# tencent-cloud-sdk-rust

./: .gitignore  Cargo.toml  README.md
examples/: instance_config_info.rs  instance_create.rs  instance_describe.rs  instance_lifecycle.rs  instance_price_inquiry.rs  instance_terminate.rs  region.rs
src/: client.rs  error.rs  lib.rs
src/services/: mod.rs  region.rs
src/services/cvm/: instance.rs  instance_config.rs  instance_operation.rs  instance_price.rs  instance_query.rs  mod.rs
src/utils/: http.rs  mod.rs  signature.rs
