[package]
name = "tencent_cloud_sdk"
version = "0.0.2"
edition = "2021"
description = "Tencent Cloud API SDK for Rust"
repository = "https://github.com/chisatonishikigi73/tencent-cloud-sdk-rust"
license = "MIT"
authors = ["chisatonishikigi73 <chisatonishikigi73@gmail.com>"]
keywords = ["tencent", "cloud", "api", "sdk"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.0"
chrono = "0.4"
rand = "0.9.1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
http = "1.3.1"

[[example]]
name = "region"
path = "examples/region.rs"

[[example]]
name = "instance_create"
path = "examples/instance_create.rs"

[[example]]
name = "instance_terminate"
path = "examples/instance_terminate.rs"

[[example]]
name = "instance_lifecycle"
path = "examples/instance_lifecycle.rs"

[[example]]
name = "instance_price_inquiry"
path = "examples/instance_price_inquiry.rs"
